fixed overflow issue with the sub menu
Added a overflow hidden to the html tag. This got rid of the horrible overflow I was getting on phone screen when getting clicking on the nav items

--- a/scss/custom-bootstrap.scss
+++ b/scss/custom-bootstrap.scss
@@ -7,6 +7,9 @@
 /* ================== Main ================== */
 /* ========================================== */
 /* ========================================== */
+html {
+    overflow-x: hidden;
+}
 body {
     font-family: 'poppins', sans-serif;
 }
